--- a/templates/stock.html
+++ b/templates/stock.html
@@ -105,6 +105,7 @@ xhr.onreadystatechange = function () {
     if (xhr.readyState == 4 && xhr.status == 200) {
         //var json = JSON.parse(xhr.responseText);
         console.log(xhr.responseText);
+        alert("successfully added the product");
     }
 }
 
